--- a/faq.html
+++ b/faq.html
@@ -114,6 +114,292 @@
         </div>
     </div>
 
+
+    <!-- FAQ Item 5 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+    <span class="faq-q-left">
+      <span class="tag tag-q">Q:</span>
+      <span class="faq-q-text">What is the difference between Matter and Zigbee?</span>
+    </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Matter is a smart home standard designed for cross-platform compatibility,
+                while Zigbee is a wireless protocol used by some devices. Matter focuses on
+                easier interoperability across ecosystems.
+            </p>
+        </div>
+    </div>
+
+    <!-- FAQ Item 6 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+    <span class="faq-q-left">
+      <span class="tag tag-q">Q:</span>
+      <span class="faq-q-text">Why does pairing fail even though my WiFi works?</span>
+    </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Pairing often depends on local network settings, not just internet access.
+                Check whether your phone and device are on the same network and whether your router blocks local discovery.
+            </p>
+        </div>
+    </div>
+
+    <!-- FAQ Item 7 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+    <span class="faq-q-left">
+      <span class="tag tag-q">Q:</span>
+      <span class="faq-q-text">Do I need Thread to use Matter lighting?</span>
+    </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Not always. Matter can run over Wi-Fi or Thread depending on the device.
+                If your device is Thread-based, you will need a Thread border router (e.g., HomePod mini, Nest Hub, Echo).
+            </p>
+        </div>
+    </div>
+
+    <!-- FAQ Item 8 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+    <span class="faq-q-left">
+      <span class="tag tag-q">Q:</span>
+      <span class="faq-q-text">Can I reset the device and re-add it to another ecosystem?</span>
+    </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Yes. You can factory reset the device and pair it again.
+                If you use multi-admin, you can also add it to multiple ecosystems without resetting.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 9 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">How do I factory reset my Matter lighting device?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                The reset method depends on the device model. Typically, holding the reset button
+                for 5–10 seconds will restore factory settings. Please refer to the product manual
+                for detailed instructions.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 10 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">What should I do if my device appears offline?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                First, check your router and ensure your device is powered on.
+                Restart your router and reconnect the device through your smart home app if needed.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 11 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">Can I control Matter devices remotely?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Yes. Remote control depends on your ecosystem setup.
+                Make sure your hub or border router supports remote access features.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 12 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">Does Matter support voice assistants?</span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Yes. Matter works with major voice assistants such as Siri, Google Assistant,
+                and Alexa, depending on your connected ecosystem.
+            </p>
+        </div>
+    </div>
+
+    <!-- FAQ Item 13 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">Is Matter secure?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Yes. Matter uses end-to-end encryption and secure device authentication
+                to ensure safe communication within your local network.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 14 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">Can I update firmware through Matter?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Firmware updates are typically managed through the manufacturer’s app
+                or your smart home ecosystem application.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 15 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">How many devices can I connect to one hub?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                The number depends on your hub and network capacity.
+                Most modern hubs can handle dozens of devices without performance issues.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 16 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">Can I schedule automatic lighting scenes?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Yes. You can create schedules and automation routines
+                within your connected smart home application.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 17 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">What WiFi frequency does Matter support?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Most Matter Wi-Fi devices operate on 2.4 GHz networks.
+                Make sure your router supports this frequency.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 18 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">Can I share device access with family members?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Yes. Most ecosystems allow you to invite family members
+                to share device control and automation permissions.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 19 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">Does Matter require cloud services?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                Matter is designed to work locally within your network.
+                However, remote access and additional features may rely on cloud services.
+            </p>
+        </div>
+    </div>
+
+
+    <!-- FAQ Item 20 -->
+    <div class="faq-item">
+        <button class="faq-question" type="button">
+        <span class="faq-q-left">
+            <span class="tag tag-q">Q:</span>
+            <span class="faq-q-text">Where can I get technical support?</span>
+        </span>
+            <span class="faq-icon">▾</span>
+        </button>
+        <div class="faq-answer" hidden>
+            <p>
+                You can contact our support team through the official website
+                or consult the troubleshooting section for common setup solutions.
+            </p>
+        </div>
+    </div>
+
+
+
 </section>
 
 
